--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
     <div class="menu-container">
         <div class="banner-container">
             <div class="banner">
-                <img src="https://pfps.gg/assets/banners/3025-juice-wrld-lighter-loop.gif" alt="Banner Image">
+                <img src="" alt="Banner Image">
                 <div class="banner-overlay">
                     <h1>Festival Menu</h1>
                 </div>
